--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </div>
 
 
-<footer class="page-footer font-small pt-3">
+<footer class="page-footer font-small pt-3 footer-background">
 	<div class="container">
 		<div class="list-unstyled list-inline text-center">
 			<button type="button" class="btn btn-outline-primary"><a  href="https://github.com/0xJeremy"><i class="fa fa-github icon-padding" style="font-size: 30px;"></i></a></button>
