--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 	<link rel="stylesheet" href="homepage.css">
@@ -12,6 +11,9 @@
 
 	<title>Jeremy Kanovsky</title>
 </head>
+
+
+
 <body>
 
 	<!-- Top Navbar -->
@@ -32,17 +34,22 @@
 		</div>
 	</nav>
 
-	<div class="container-fluid bg-1 text-center">
+
+<!-- 	Section One -->
+<div class="container-fluid bg-1 text-center">
 		<img src="main_name.svg" style="padding-top: 2em;" width="750" alt="Jeremy Kanovsky">
 	</br></br></br>
-		<h3>Mechanical Engineer & Computer Scientist</h3>
+	<h3>Mechanical Engineer & Computer Scientist</h3>
 	</br></br>
 	<button type="button" class="btn btn-primary btn-lg button-mid">Resume</button>
 	<button type="button" class="btn btn-primary btn-lg button-mid">Projects</button>
-</br></br></br>
+	</br></br></br>
 </div>
 
 
+
+
+<!-- Footer -->
 <footer class="page-footer font-small pt-3 footer-background">
 	<div class="container">
 		<div class="list-unstyled list-inline text-center">
@@ -52,10 +59,10 @@
 			<button type="button" class="btn btn-outline-primary"><a href="#"><i class="fa fa-skype icon-padding" style="font-size: 30px;"></i></a></button>
 		</div>
 		<div class="footer-copyright text-center py-3">© 2018 Copyright:
-      <a href="#"> Jeremy Kanovsky</a>
-    </div>
+			<a href="#"> Jeremy Kanovsky</a>
+		</div>
 	</div>
-	</footer>
+</footer>
 
 
 <!-- Optional JavaScript -->
