--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 <footer class="page-footer font-small pt-3 footer-background">
 	<div class="container">
 		<div class="list-unstyled list-inline text-center">
-			<button type="button" class="btn btn-outline-primary"><a  href="https://github.com/0xJeremy"><i class="fa fa-github icon-padding" style="font-size: 30px;"></i></a></button>
-			<button type="button" class="btn btn-outline-primary"><a href="#"><i class="fa fa-slack icon-padding" style="font-size: 30px;"></i></a></button>
-			<button type="button" class="btn btn-outline-primary"><a href="https://www.linkedin.com/in/jeremy-kanovsky-4a13ba137/"><i class="fa fa-linkedin icon-padding" style="font-size: 30px;"></i></a></button>
-			<button type="button" class="btn btn-outline-primary"><a href="#"><i class="fa fa-skype icon-padding" style="font-size: 30px;"></i></a></button>
+			<button type="button" class="btn btn-outline-primary bottom-button-space"><a  href="https://github.com/0xJeremy"><i class="fa fa-github icon-padding" style="font-size: 30px;"></i></a></button>
+			<button type="button" class="btn btn-outline-primary bottom-button-space"><a href="#"><i class="fa fa-slack icon-padding" style="font-size: 30px;"></i></a></button>
+			<button type="button" class="btn btn-outline-primary bottom-button-space"><a href="https://www.linkedin.com/in/jeremy-kanovsky-4a13ba137/"><i class="fa fa-linkedin icon-padding" style="font-size: 30px; bottom-button-space"></i></a></button>
+			<button type="button" class="btn btn-outline-primary bottom-button-space"><a href="#"><i class="fa fa-skype icon-padding" style="font-size: 30px;"></i></a></button>
 		</div>
 		<div class="footer-copyright text-center py-3">© 2018 Copyright:
 			<a href="#"> Jeremy Kanovsky</a>
