--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <!-- 	Section One -->
 <div class="container-fluid bg-1 text-center">
-	<img src="main_name.svg" style="padding-top: 2em;" width="750" alt="Jeremy Kanovsky">
+	<img src="main_name.svg" class="img-fluid" style="padding-top: 2em;" width="750" alt="Jeremy Kanovsky">
 	</br></br></br>
 	<h3>Mechanical Engineer & Computer Scientist</h3>
 	</br></br>
