--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<nav class="nav nav-pills nav-fill">
 					<a class="nav-item nav-link active pill-space" href="#">Home</a>
 					<a class="nav-item nav-link active pill-space" href="#">Contact</a>
-					<a class="nav-item nav-link active pill-space" href="#">Resume</a>
+					<a class="nav-item nav-link active pill-space" href="JCK Resume.pdf" target="_blank">Resume</a>
 					<a class="nav-item nav-link active pill-space" href="#">Projects</a>
 				</nav>
 			</div>
@@ -42,9 +42,16 @@
 	</br></br></br>
 	<h3>Mechanical Engineer & Computer Scientist</h3>
 	</br></br>
-	<button type="button" class="btn btn-primary btn-lg button-mid">Resume</button>
+	<a href="JCK Resume.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg button-mid">Resume</button></a>
 	<button type="button" class="btn btn-primary btn-lg button-mid">Projects</button>
 	</br></br></br>
+</div>
+
+
+<!-- Contact Section -->
+<div class="container-fluid bg-2 text-center">
+	<p class="contact-me">Contact Me</p>
+	<p class="contact-me-info">Personal Email - <a href="mailto:kanovsky.jeremy@gmail.com">kanovsky.jeremy@gmail.com</a></br>School Email - <a href="mailto:jeremy.kanovsky@tufts.com">jeremy.kanovsky@tufts.edu</a></br>Phone - 215.622.6520</p>
 </div>
 
 
