Added homepage sections

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="navbar-nav ml-auto">
 				<nav class="nav nav-pills nav-fill">
 					<a class="nav-item nav-link active pill-space" href="#">Home</a>
-					<a class="nav-item nav-link active pill-space" href="#">Contact</a>
+					<a class="nav-item nav-link active pill-space" href="index.html#contact-me">Contact</a>
 					<a class="nav-item nav-link active pill-space" href="JCK Resume.pdf" target="_blank">Resume</a>
 					<a class="nav-item nav-link active pill-space" href="#">Projects</a>
 				</nav>
@@ -40,7 +40,7 @@
 <div class="container-fluid bg-1 text-center">
 	<img src="main_name.svg" class="img-fluid" style="padding-top: 2em;" width="750" alt="Jeremy Kanovsky">
 	</br></br></br>
-	<h3>Mechanical Engineer & Computer Scientist</h3>
+	<p class="name-sub-text">mechanical engineer // programmer</p>
 	</br></br>
 	<a href="JCK Resume.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg button-mid">Resume</button></a>
 	<button type="button" class="btn btn-primary btn-lg button-mid">Projects</button>
@@ -48,9 +48,17 @@
 </div>
 
 
+<!-- About Me -->
+<div class="container-fluid w-50 bg-2 text-center">
+	<a name="about-me"></a>
+	<p class="section-header">About Me</p>
+	<p class="about-me-info">Hello! I am Jeremy Kanovsky, a student at Tufts University. I am studying Mechanical Engineering and Computer Science with a possible minor in Mathematics. At Tufts I am a member of the Engineering Student Council, the robotics team, the MAKE club, and the rocketry team.In my free time, I enjoy reading, attending hackathons, and spending time at the beach. Feel free to <a href="#contact-me">contact me</a> about anything!</p>
+</div>
+
 <!-- Contact Section -->
-<div class="container-fluid bg-2 text-center">
-	<p class="contact-me">Contact Me</p>
+<div class="container-fluid bg-3 text-center">
+	<a name="contact-me"></a>
+	<p class="section-header">Contact Me</p>
 	<p class="contact-me-info">Personal Email - <a href="mailto:kanovsky.jeremy@gmail.com">kanovsky.jeremy@gmail.com</a></br>School Email - <a href="mailto:jeremy.kanovsky@tufts.com">jeremy.kanovsky@tufts.edu</a></br>Phone - 215.622.6520</p>
 </div>
 
@@ -63,7 +71,7 @@
 		<div class="list-unstyled list-inline text-center">
 			<button type="button" class="btn btn-outline-primary bottom-button-space"><a  href="https://github.com/0xJeremy"><i class="fa fa-github icon-padding" style="font-size: 30px;"></i></a></button>
 			<button type="button" class="btn btn-outline-primary bottom-button-space"><a href="#"><i class="fa fa-slack icon-padding" style="font-size: 30px;"></i></a></button>
-			<button type="button" class="btn btn-outline-primary bottom-button-space"><a href="https://www.linkedin.com/in/jeremy-kanovsky-4a13ba137/"><i class="fa fa-linkedin icon-padding" style="font-size: 30px; bottom-button-space"></i></a></button>
+			<button type="button" class="btn btn-outline-primary bottom-button-space"><a href="http://www.linkedin.com/in/jeremy-kanovsky/"><i class="fa fa-linkedin icon-padding" style="font-size: 30px; bottom-button-space"></i></a></button>
 			<button type="button" class="btn btn-outline-primary bottom-button-space"><a href="#"><i class="fa fa-skype icon-padding" style="font-size: 30px;"></i></a></button>
 		</div>
 		<div class="footer-copyright text-center py-3">© 2018 Copyright:
