Added projects showcase

--- a/index.html
+++ b/index.html
@@ -55,8 +55,40 @@
 	<p class="about-me-info">Hello! I am Jeremy Kanovsky, a student at Tufts University. I am studying Mechanical Engineering and Computer Science with a possible minor in Mathematics. At Tufts I am a member of the Engineering Student Council, the robotics team, the MAKE club, and the rocketry team.In my free time, I enjoy reading, attending hackathons, and spending time at the beach. Feel free to <a href="#contact-me">contact me</a> about anything!</p>
 </div>
 
+<!-- Projects Showcase -->
+<div class="container-fluid w-75 bg-3 text-center">
+	<a name="projects-showcase"></a>
+	<p class="section-header">Projects Showcase</p>
+	<div class="row">
+		<div class="card col-sm" style="width: 18rem;">
+  			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
+  			<div class="card-body">
+    			<h5 class="card-title">Project Title</h5>
+    			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
+    			<a href="#" class="btn btn-primary">See More</a>
+  			</div>
+		</div>
+		<div class="card col-sm" style="width: 18rem;">
+  			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
+  			<div class="card-body">
+    			<h5 class="card-title">Project Title</h5>
+    			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
+    			<a href="#" class="btn btn-primary">See More</a>
+  			</div>
+		</div>
+		<div class="card col-sm" style="width: 18rem;">
+  			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
+  			<div class="card-body">
+    			<h5 class="card-title">Project Title</h5>
+    			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
+    			<a href="#" class="btn btn-primary">See More</a>
+  			</div>
+		</div>
+	</div>
+</div>
+
 <!-- Contact Section -->
-<div class="container-fluid bg-3 text-center">
+<div class="container-fluid bg-4 text-center">
 	<a name="contact-me"></a>
 	<p class="section-header">Contact Me</p>
 	<p class="contact-me-info">Personal Email - <a href="mailto:kanovsky.jeremy@gmail.com">kanovsky.jeremy@gmail.com</a></br>School Email - <a href="mailto:jeremy.kanovsky@tufts.com">jeremy.kanovsky@tufts.edu</a></br>Phone - 215.622.6520</p>
