Added box shadow and background

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<a name="projects-showcase"></a>
 	<p class="section-header">Projects Showcase</p>
 	<div class="row">
-		<div class="card col-sm" style="width: 18rem;">
+		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
   			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
   			<div class="card-body">
     			<h5 class="card-title">Project Title</h5>
@@ -68,7 +68,7 @@
     			<a href="#" class="btn btn-primary">See More</a>
   			</div>
 		</div>
-		<div class="card col-sm" style="width: 18rem;">
+		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
   			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
   			<div class="card-body">
     			<h5 class="card-title">Project Title</h5>
@@ -76,7 +76,7 @@
     			<a href="#" class="btn btn-primary">See More</a>
   			</div>
 		</div>
-		<div class="card col-sm" style="width: 18rem;">
+		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
   			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
   			<div class="card-body">
     			<h5 class="card-title">Project Title</h5>
