--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 </div>
 
 <!-- Projects Showcase -->
+<div style="background-color: #ecf0f1">
 <div class="container-fluid w-75 bg-3 text-center">
 	<a name="projects-showcase"></a>
 	<p class="section-header">Projects Showcase</p>
@@ -85,6 +86,7 @@
   			</div>
 		</div>
 	</div>
+</div>
 </div>
 
 <!-- Contact Section -->
