Updated Projects section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<a class="nav-item nav-link active pill-space" href="#">Home</a>
 					<a class="nav-item nav-link active pill-space" href="index.html#contact-me">Contact</a>
 					<a class="nav-item nav-link active pill-space" href="JCK Resume.pdf" target="_blank">Resume</a>
-					<a class="nav-item nav-link active pill-space" href="#">Projects</a>
+					<a class="nav-item nav-link active pill-space" href="#projects-showcase">Projects</a>
 				</nav>
 			</div>
 		</div>
@@ -43,7 +43,7 @@
 	<p class="name-sub-text">mechanical engineer // programmer</p>
 	</br></br>
 	<a href="JCK Resume.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg button-mid">Resume</button></a>
-	<button type="button" class="btn btn-primary btn-lg button-mid">Projects</button>
+	<a href="#projects-showcase"><button type="button" class="btn btn-primary btn-lg button-mid">Projects</button></a>
 	</br></br></br>
 </div>
 
@@ -60,7 +60,8 @@
 <div class="container-fluid w-75 bg-3 text-center">
 	<a name="projects-showcase"></a>
 	<p class="section-header">Projects Showcase</p>
-	<div class="row">
+	<p class="section-header">// coming soon //</p>
+	<!-- <div class="row">
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
   			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
   			<div class="card-body">
@@ -85,7 +86,7 @@
     			<a href="#" class="btn btn-primary">See More</a>
   			</div>
 		</div>
-	</div>
+	</div> -->
 </div>
 </div>
 
