Updated bottom buttons

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <div class="container-fluid w-75 bg-2 text-center">
 	<a name="about-me"></a>
 	<p class="section-header">About Me</p>
-	<p class="about-me-info">Hello! I am Jeremy Kanovsky, a student at Tufts University. I am studying Mechanical Engineering and Computer Science with a possible minor in Mathematics. At Tufts I am a member of the Engineering Student Council, the robotics team, the MAKE club, and the rocketry team.In my free time, I enjoy reading, attending hackathons, and spending time at the beach. Feel free to <a href="#contact-me">contact me</a> about anything!</p>
+	<p class="about-me-info">Hello! I am Jeremy Kanovsky, a student at Tufts University. I am studying Mechanical Engineering and Computer Science with a possible minor in Mathematics. At Tufts I am a member of the Engineering Student Council, the robotics team, the MAKE club, and the rocketry team. In my free time, I enjoy reading, attending hackathons, and spending time at the beach. Feel free to <a href="#contact-me">contact me</a> about anything!</p>
 </div>
 
 <!-- Projects Showcase -->
@@ -105,9 +105,9 @@
 	<div class="container">
 		<div class="list-unstyled list-inline text-center">
 			<button type="button" class="btn btn-outline-primary bottom-button-space"><a  href="https://github.com/0xJeremy"><i class="fa fa-github icon-padding" style="font-size: 30px;"></i></a></button>
-			<button type="button" class="btn btn-outline-primary bottom-button-space"><a href="#"><i class="fa fa-slack icon-padding" style="font-size: 30px;"></i></a></button>
+			<button type="button" class="btn btn-outline-primary bottom-button-space"><a href="mailto:kanovsky.jeremy@gmail.com"><i class="fa fa-envelope icon-padding" style="font-size: 30px;"></i></a></button>
 			<button type="button" class="btn btn-outline-primary bottom-button-space"><a href="http://www.linkedin.com/in/jeremy-kanovsky/"><i class="fa fa-linkedin icon-padding" style="font-size: 30px; bottom-button-space"></i></a></button>
-			<button type="button" class="btn btn-outline-primary bottom-button-space"><a href="#"><i class="fa fa-skype icon-padding" style="font-size: 30px;"></i></a></button>
+			<button type="button" class="btn btn-outline-primary bottom-button-space"><a href="index.html#contact-me" ><i class="fa fa-phone icon-padding" style="font-size: 30px;"></i></a></button>
 		</div>
 		<div class="footer-copyright text-center py-3">© 2018 Copyright:
 			<a href="#"> Jeremy Kanovsky</a>
