--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <!-- About Me -->
 <div class="container-fluid w-75 bg-2 text-center">
 	<a name="about-me"></a>
-	<p class="section-header">About Me</p>
+	<p class="section-header">// about me //</p>
 	<p class="about-me-info">Hello! I am Jeremy Kanovsky, a student at Tufts University. I am studying Mechanical Engineering and Computer Science with a possible minor in Mathematics. At Tufts I am a member of the Engineering Student Council, the robotics team, the MAKE club, and the rocketry team. In my free time, I enjoy reading, attending hackathons, and spending time at the beach. Feel free to <a href="#contact-me">contact me</a> about anything!</p>
 </div>
 
@@ -59,8 +59,8 @@
 <div style="background-color: #ecf0f1">
 <div class="container-fluid w-75 bg-3 text-center">
 	<a name="projects-showcase"></a>
-	<p class="section-header">Projects Showcase</p>
-	<p class="section-header">// coming soon //</p>
+	<p class="section-header">// projects showcase //</p>
+	<p class="section-header">coming soon</p>
 	<!-- <div class="row">
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
   			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
@@ -93,7 +93,7 @@
 <!-- Contact Section -->
 <div class="container-fluid bg-4 text-center">
 	<a name="contact-me"></a>
-	<p class="section-header">Contact Me</p>
+	<p class="section-header">// contact me //</p>
 	<p class="contact-me-info">Personal Email - <a href="mailto:kanovsky.jeremy@gmail.com">kanovsky.jeremy@gmail.com</a></br>School Email - <a href="mailto:jeremy.kanovsky@tufts.com">jeremy.kanovsky@tufts.edu</a></br>Phone - 215.622.6520</p>
 </div>
 
