--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-	<link rel="stylesheet" href="homepage.css">
+	<link rel="stylesheet" href="projects.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="icon" href="favicon.png">
 
@@ -36,32 +36,13 @@
 	</nav>
 
 
-<!-- 	Section One -->
-<div class="container-fluid bg-1 text-center">
-	<img src="main_name.svg" class="img-fluid" style="padding-top: 2em;" width="750" alt="Jeremy Kanovsky">
-	</br></br></br>
-	<p class="name-sub-text">mechanical engineer // programmer</p>
-	</br></br>
-	<a href="JCK Resume.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg button-mid">Resume</button></a>
-	<a href="#projects-showcase"><button type="button" class="btn btn-primary btn-lg button-mid">Projects</button></a>
-	</br></br></br>
-</div>
 
-
-<!-- About Me -->
-<div class="container-fluid w-75 bg-2 text-center">
-	<a name="about-me"></a>
-	<p class="section-header">// about me //</p>
-	<p class="about-me-info">Hello! I am Jeremy Kanovsky, a student at Tufts University. I am studying Mechanical Engineering and Computer Science with a possible minor in Mathematics. At Tufts I am a member of the Engineering Student Council, the robotics team, the MAKE club, and the rocketry team. In my free time, I enjoy reading, attending hackathons, and spending time at the beach. Feel free to <a href="#contact-me">contact me</a> about anything!</p>
-</div>
 
 <!-- Projects Showcase -->
-<div style="background-color: #ecf0f1">
-<div class="container-fluid w-75 bg-3 text-center">
-	<a name="projects-showcase"></a>
-	<p class="section-header">// projects showcase //</p>
-	<p class="section-header">coming soon</p>
-	<!-- <div class="row">
+<div class="sides">
+<div class="container-fluid w-75 bg-3 text-center projects-background">
+	<p class="section-header">// projects //</p>
+	<div class="row">
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
   			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
   			<div class="card-body">
@@ -86,16 +67,36 @@
     			<a href="#" class="btn btn-primary">See More</a>
   			</div>
 		</div>
-	</div> -->
+	</div>
+	<div class="row">
+		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+  			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
+  			<div class="card-body">
+    			<h5 class="card-title">Project Title</h5>
+    			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
+    			<a href="#" class="btn btn-primary">See More</a>
+  			</div>
+		</div>
+		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+  			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
+  			<div class="card-body">
+    			<h5 class="card-title">Project Title</h5>
+    			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
+    			<a href="#" class="btn btn-primary">See More</a>
+  			</div>
+		</div>
+		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+  			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
+  			<div class="card-body">
+    			<h5 class="card-title">Project Title</h5>
+    			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
+    			<a href="#" class="btn btn-primary">See More</a>
+  			</div>
+		</div>
+	</div>
 </div>
 </div>
 
-<!-- Contact Section -->
-<div class="container-fluid bg-4 text-center">
-	<a name="contact-me"></a>
-	<p class="section-header">// contact me //</p>
-	<p class="contact-me-info">Personal Email - <a href="mailto:kanovsky.jeremy@gmail.com">kanovsky.jeremy@gmail.com</a></br>School Email - <a href="mailto:jeremy.kanovsky@tufts.com">jeremy.kanovsky@tufts.edu</a></br>Phone - 215.622.6520</p>
-</div>
 
 
 
