--- a/project_template.html
+++ b/project_template.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-	<link rel="stylesheet" href="projects.css">
+	<link rel="stylesheet" href="project_template.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="icon" href="favicon.png">
 
@@ -38,62 +38,23 @@
 
 
 
-<!-- Projects Showcase -->
+<!-- Project Information -->
 <div class="sides">
 <div class="container-fluid w-75 bg-3 text-center projects-background">
-	<p class="section-header">// projects //</p>
-	<div class="row">
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
-  			<div class="card-body">
-    			<h5 class="card-title">Project Title</h5>
-    			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
-    			<a href="project_template.html" class="btn btn-primary">See More</a>
-  			</div>
-		</div>
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
-  			<div class="card-body">
-    			<h5 class="card-title">Project Title</h5>
-    			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
-    			<a href="project_template.html" class="btn btn-primary">See More</a>
-  			</div>
-		</div>
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
-  			<div class="card-body">
-    			<h5 class="card-title">Project Title</h5>
-    			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
-    			<a href="project_template.html" class="btn btn-primary">See More</a>
-  			</div>
-		</div>
-	</div>
-	<div class="row">
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
-  			<div class="card-body">
-    			<h5 class="card-title">Project Title</h5>
-    			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
-    			<a href="project_template.html" class="btn btn-primary">See More</a>
-  			</div>
-		</div>
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
-  			<div class="card-body">
-    			<h5 class="card-title">Project Title</h5>
-    			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
-    			<a href="project_template.html" class="btn btn-primary">See More</a>
-  			</div>
-		</div>
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
-  			<div class="card-body">
-    			<h5 class="card-title">Project Title</h5>
-    			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
-    			<a href="project_template.html" class="btn btn-primary">See More</a>
-  			</div>
-		</div>
-	</div>
+	<p class="section-header">// projects name here //</p>
+	<div class="container">
+  		<div class="row">
+    		<div class="col">
+      			<img src="placeholder.svg" class="img-fluid project-image" alt="Responsive image">
+    		</div>
+    		<div class="col">
+    			 <img src="placeholder.svg" class="img-fluid project-image" alt="Responsive image">
+    		</div>
+  		</div>
+  		<div class="row">
+  			<p class="project-information">This is where the information about the project(s) will go. There will soon be headers with information about what I did in the project and other information...</p>
+  		</div>
+  	</div>
 </div>
 </div>
 
