Added Projects Page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<p class="name-sub-text">mechanical engineer // programmer</p>
 	</br></br>
 	<a href="JCK Resume.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg button-mid">Resume</button></a>
-	<a href="#projects-showcase"><button type="button" class="btn btn-primary btn-lg button-mid">Projects</button></a>
+	<a href="projects.html"><button type="button" class="btn btn-primary btn-lg button-mid">Projects</button></a>
 	</br></br></br>
 </div>
 
