Updated file structure

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-	<link rel="stylesheet" href="homepage.css">
+	<link rel="stylesheet" href="css/homepage.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="icon" href="favicon.png">
+	<link rel="icon" href="images/favicon.png">
 
 	<title>Jeremy Kanovsky</title>
 </head>
@@ -19,7 +19,7 @@
 
 	<!-- Top Navbar -->
 	<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-		<a class="navbar-brand" href="index.html"><img src="corner_icon.svg" width="50" height="50"></a>
+		<a class="navbar-brand" href="index.html"><img src="images/corner_icon.svg" width="50" height="50"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -38,7 +38,7 @@
 
 <!-- 	Section One -->
 <div class="container-fluid bg-1 text-center">
-	<img src="main_name.svg" class="img-fluid" style="padding-top: 2em;" width="750" alt="Jeremy Kanovsky">
+	<img src="images/main_name.svg" class="img-fluid" style="padding-top: 2em;" width="750" alt="Jeremy Kanovsky">
 	</br></br></br>
 	<p class="name-sub-text">mechanical engineer // programmer</p>
 	</br></br>
@@ -60,10 +60,17 @@
 <div class="container-fluid w-75 bg-3 text-center">
 	<a name="projects-showcase"></a>
 	<p class="section-header">// projects showcase //</p>
-	<p class="section-header">coming soon</p>
-	<!-- <div class="row">
+	<div class="row">
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
+  			<img class="card-img-top" src="images/trinity/IMG_4857.jpg" alt="Card image cap">
+  			<div class="card-body">
+    			<h5 class="card-title">Firefighting Robot</h5>
+    			<p class="card-text">This robot was built as part of the Trinity International Firefighting competition.</p>
+    			<a href="#" class="btn btn-primary">See More</a>
+  			</div>
+		</div>
+		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+  			<img class="card-img-top" src="images/placeholder.svg" alt="Card image cap">
   			<div class="card-body">
     			<h5 class="card-title">Project Title</h5>
     			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
@@ -71,22 +78,14 @@
   			</div>
 		</div>
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
+  			<img class="card-img-top" src="images/placeholder.svg" alt="Card image cap">
   			<div class="card-body">
     			<h5 class="card-title">Project Title</h5>
     			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
     			<a href="#" class="btn btn-primary">See More</a>
   			</div>
 		</div>
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
-  			<div class="card-body">
-    			<h5 class="card-title">Project Title</h5>
-    			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
-    			<a href="#" class="btn btn-primary">See More</a>
-  			</div>
-		</div>
-	</div> -->
+	</div>
 </div>
 </div>
 
