--- a/project_template.html
+++ b/project_template.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-	<link rel="stylesheet" href="project_template.css">
+	<link rel="stylesheet" href="css/project_template.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="icon" href="favicon.png">
+	<link rel="icon" href="images/favicon.png">
 
 	<title>Jeremy Kanovsky</title>
 </head>
@@ -19,7 +19,7 @@
 
 	<!-- Top Navbar -->
 	<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-		<a class="navbar-brand" href="index.html"><img src="corner_icon.svg" width="50" height="50"></a>
+		<a class="navbar-brand" href="index.html"><img src="images/corner_icon.svg" width="50" height="50"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -45,10 +45,10 @@
 	<div class="container">
   		<div class="row">
     		<div class="col">
-      			<img src="placeholder.svg" class="img-fluid project-image" alt="Responsive image">
+      			<img src="images/placeholder.svg" class="img-fluid project-image" alt="Responsive image">
     		</div>
     		<div class="col">
-    			 <img src="placeholder.svg" class="img-fluid project-image" alt="Responsive image">
+    			 <img src="images/placeholder.svg" class="img-fluid project-image" alt="Responsive image">
     		</div>
   		</div>
   		<div class="row">
