--- a/projects.html
+++ b/projects.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-	<link rel="stylesheet" href="projects.css">
+	<link rel="stylesheet" href="css/projects.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="icon" href="favicon.png">
+	<link rel="icon" href="images/favicon.png">
 
 	<title>Jeremy Kanovsky</title>
 </head>
@@ -19,7 +19,7 @@
 
 	<!-- Top Navbar -->
 	<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-		<a class="navbar-brand" href="index.html"><img src="corner_icon.svg" width="50" height="50"></a>
+		<a class="navbar-brand" href="index.html"><img src="images/corner_icon.svg" width="50" height="50"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -44,7 +44,15 @@
 	<p class="section-header">// projects //</p>
 	<div class="row">
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
+  			<img class="card-img-top" src="images/trinity/IMG_4857.jpg" alt="Card image cap">
+  			<div class="card-body">
+    			<h5 class="card-title">Firefighting Robot</h5>
+    			<p class="card-text">This robot was built as part of the Trinity International Firefighting competition.</p>
+    			<a href="#" class="btn btn-primary">See More</a>
+  			</div>
+		</div>
+		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+  			<img class="card-img-top" src="images/placeholder.svg" alt="Card image cap">
   			<div class="card-body">
     			<h5 class="card-title">Project Title</h5>
     			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
@@ -52,15 +60,7 @@
   			</div>
 		</div>
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
-  			<div class="card-body">
-    			<h5 class="card-title">Project Title</h5>
-    			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
-    			<a href="project_template.html" class="btn btn-primary">See More</a>
-  			</div>
-		</div>
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
+  			<img class="card-img-top" src="images/placeholder.svg" alt="Card image cap">
   			<div class="card-body">
     			<h5 class="card-title">Project Title</h5>
     			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
@@ -70,7 +70,7 @@
 	</div>
 	<div class="row">
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
+  			<img class="card-img-top" src="images/placeholder.svg" alt="Card image cap">
   			<div class="card-body">
     			<h5 class="card-title">Project Title</h5>
     			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
@@ -78,7 +78,7 @@
   			</div>
 		</div>
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
+  			<img class="card-img-top" src="images/placeholder.svg" alt="Card image cap">
   			<div class="card-body">
     			<h5 class="card-title">Project Title</h5>
     			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
@@ -86,7 +86,7 @@
   			</div>
 		</div>
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="placeholder.svg" alt="Card image cap">
+  			<img class="card-img-top" src="images/placeholder.svg" alt="Card image cap">
   			<div class="card-body">
     			<h5 class="card-title">Project Title</h5>
     			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
@@ -119,8 +119,8 @@
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+<script src="images/https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="images/https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="images/https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 </body>
 </html>
