Added trinity project

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	<p class="section-header">// projects showcase //</p>
 	<div class="row">
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="images/trinity/IMG_4857.jpg" alt="Card image cap">
+  			<img class="card-img-top" src="images/trinity/IMG_4857.JPG" alt="Card image cap">
   			<div class="card-body">
     			<h5 class="card-title">Firefighting Robot</h5>
     			<p class="card-text">This robot was built as part of the Trinity International Firefighting competition.</p>
