Added Project Pages

--- a/index.html
+++ b/index.html
@@ -62,27 +62,27 @@
 	<p class="section-header">// projects showcase //</p>
 	<div class="row">
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="images/trinity/IMG_4857.JPG" alt="Card image cap">
+  			<img class="card-img-top" src="images/trinity/IMG_4857.JPG" alt="Trinity Robot">
   			<div class="card-body">
     			<h5 class="card-title">Firefighting Robot</h5>
     			<p class="card-text">This robot was built as part of the Trinity International Firefighting competition.</p>
-    			<a href="#" class="btn btn-primary">See More</a>
+    			<a href="project_pages/trinity_robot.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="images/placeholder.svg" alt="Card image cap">
+  			<img class="card-img-top" src="images/couch/image2.JPEG" alt="Drivable Couch">
   			<div class="card-body">
-    			<h5 class="card-title">Project Title</h5>
-    			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
-    			<a href="#" class="btn btn-primary">See More</a>
+    			<h5 class="card-title">Drivable Couch</h5>
+    			<p class="card-text">This drivable platform (pictured) is soon to be a drivable couch once suitable furniture can be found...</p>
+    			<a href="project_pages/couch_robot.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="images/placeholder.svg" alt="Card image cap">
+  			<img class="card-img-top" src="images/mbta/mbta_screenshot.PNG" alt="MBTA Map">
   			<div class="card-body">
-    			<h5 class="card-title">Project Title</h5>
-    			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
-    			<a href="#" class="btn btn-primary">See More</a>
+    			<h5 class="card-title">MBTA Map with Trainschedule</h5>
+    			<p class="card-text">This was a project for Tufts Comp-20 in which the Google Maps API was used to map the MBTA redline and provide a live train schedule.</p>
+    			<a href="project_pages/mbta_map.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
 	</div>
