--- a/project_pages/couch_robot.html
+++ b/project_pages/couch_robot.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/project_template.css">
+	<link rel="stylesheet" href="../css/project_template.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="icon" href="images/favicon.png">
+	<link rel="icon" href="../images/favicon.png">
 
 	<title>Jeremy Kanovsky</title>
 </head>
@@ -19,17 +19,17 @@
 
 	<!-- Top Navbar -->
 	<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-		<a class="navbar-brand" href="index.html"><img src="images/corner_icon.svg" width="50" height="50"></a>
+		<a class="navbar-brand" href="../index.html"><img src="../images/corner_icon.svg" width="50" height="50"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav ml-auto">
 				<nav class="nav nav-pills nav-fill">
-					<a class="nav-item nav-link active pill-space" href="index.html">Home</a>
-					<a class="nav-item nav-link active pill-space" href="index.html#contact-me">Contact</a>
-					<a class="nav-item nav-link active pill-space" href="JCK Resume.pdf" target="_blank">Resume</a>
-					<a class="nav-item nav-link active pill-space" href="projects.html">Projects</a>
+					<a class="nav-item nav-link active pill-space" href="../index.html">Home</a>
+					<a class="nav-item nav-link active pill-space" href="../index.html#contact-me">Contact</a>
+					<a class="nav-item nav-link active pill-space" href="../JCK Resume.pdf" target="_blank">Resume</a>
+					<a class="nav-item nav-link active pill-space" href="../projects.html">Projects</a>
 				</nav>
 			</div>
 		</div>
@@ -41,18 +41,15 @@
 <!-- Project Information -->
 <div class="sides">
 <div class="container-fluid w-75 bg-3 text-center projects-background">
-	<p class="section-header">// projects name here //</p>
+	<p class="section-header">// drivable couch //</p>
 	<div class="container">
   		<div class="row">
     		<div class="col">
-      			<img src="images/placeholder.svg" class="img-fluid project-image" alt="Responsive image">
-    		</div>
-    		<div class="col">
-    			 <img src="images/placeholder.svg" class="img-fluid project-image" alt="Responsive image">
+      			<img src="../images/couch/image2.JPEG" class="img-fluid project-image" alt="Responsive image">
     		</div>
   		</div>
   		<div class="row">
-  			<p class="project-information">This is where the information about the project(s) will go. There will soon be headers with information about what I did in the project and other information...</p>
+  			<p class="project-information">This was a project with the Tufts Robotics club. We designed and built a remote controlled platform onto which will be mounted a couch. The drivable couch was built using FIRST Robotics hardware and programmed in C++. More pictures will be coming soon...</p>
   		</div>
   	</div>
 </div>
@@ -69,7 +66,7 @@
 			<button type="button" class="btn btn-outline-primary bottom-button-space"><a  href="https://github.com/0xJeremy"><i class="fa fa-github icon-padding" style="font-size: 30px;"></i></a></button>
 			<button type="button" class="btn btn-outline-primary bottom-button-space"><a href="mailto:kanovsky.jeremy@gmail.com"><i class="fa fa-envelope icon-padding" style="font-size: 30px;"></i></a></button>
 			<button type="button" class="btn btn-outline-primary bottom-button-space"><a href="http://www.linkedin.com/in/jeremy-kanovsky/"><i class="fa fa-linkedin icon-padding" style="font-size: 30px; bottom-button-space"></i></a></button>
-			<button type="button" class="btn btn-outline-primary bottom-button-space"><a href="index.html#contact-me" ><i class="fa fa-phone icon-padding" style="font-size: 30px;"></i></a></button>
+			<button type="button" class="btn btn-outline-primary bottom-button-space"><a href="../index.html#contact-me" ><i class="fa fa-phone icon-padding" style="font-size: 30px;"></i></a></button>
 		</div>
 		<div class="footer-copyright text-center py-3">© 2018 Copyright:
 			<a href="#"> Jeremy Kanovsky</a>
