--- a/projects.html
+++ b/projects.html
@@ -52,19 +52,19 @@
   			</div>
 		</div>
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="images/placeholder.svg" alt="Card image cap">
+  			<img class="card-img-top" src="images/couch/image2.JPEG" alt="Drivable Couch">
   			<div class="card-body">
-    			<h5 class="card-title">Project Title</h5>
-    			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
-    			<a href="project_template.html" class="btn btn-primary">See More</a>
+    			<h5 class="card-title">Drivable Couch</h5>
+    			<p class="card-text">This drivable platform (pictured) is soon to be a drivable couch once suitable furniture can be found...</p>
+    			<a href="#" class="btn btn-primary">See More</a>
   			</div>
 		</div>
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="images/placeholder.svg" alt="Card image cap">
+  			<img class="card-img-top" src="images/mbta/mbta_screenshot.PNG" alt="MBTA Map">
   			<div class="card-body">
-    			<h5 class="card-title">Project Title</h5>
-    			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
-    			<a href="project_template.html" class="btn btn-primary">See More</a>
+    			<h5 class="card-title">MBTA Map with Trainschedule</h5>
+    			<p class="card-text">This was a project for Tufts Comp-20 in which the Google Maps API was used to map the MBTA redline and provide a live train schedule.</p>
+    			<a href="#" class="btn btn-primary">See More</a>
   			</div>
 		</div>
 	</div>
