Added Project Pages

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   			</div>
 		</div>
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="images/couch/image2.JPEG" alt="Drivable Couch">
+  			<img class="card-img-top" src="images/couch/image2.jpeg" alt="Drivable Couch">
   			<div class="card-body">
     			<h5 class="card-title">Drivable Couch</h5>
     			<p class="card-text">This drivable platform (pictured) is soon to be a drivable couch once suitable furniture can be found...</p>
@@ -78,7 +78,7 @@
   			</div>
 		</div>
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="images/mbta/mbta_screenshot.PNG" alt="MBTA Map">
+  			<img class="card-img-top" src="images/mbta/mbta_screenshot.png" alt="MBTA Map">
   			<div class="card-body">
     			<h5 class="card-title">MBTA Map with Trainschedule</h5>
     			<p class="card-text">This was a project for Tufts Comp-20 in which the Google Maps API was used to map the MBTA redline and provide a live train schedule.</p>
