Updated Cards on Project Page

--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
     			<a href="project_pages/mbta_map.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
-	<div class="row">
+<!-- 	<div class="row">
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
   			<img class="card-img-top" src="images/placeholder.svg" alt="Card image cap">
   			<div class="card-body">
@@ -92,7 +92,7 @@
     			<a href="project_template.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
-	</div>
+	</div> -->
 </div>
 </div>
 
