--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   			</div>
 		</div>
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="images/couch/image2.jpeg" alt="Drivable Couch">
+  			<img class="card-img-top" src="images/couch/image3.png" alt="Drivable Couch">
   			<div class="card-body">
     			<h5 class="card-title">Drivable Couch</h5>
     			<p class="card-text">This drivable platform (pictured) is soon to be a drivable couch once suitable furniture can be found...</p>
