--- a/project_pages/couch_robot.html
+++ b/project_pages/couch_robot.html
@@ -45,7 +45,10 @@
 	<div class="container">
   		<div class="row">
     		<div class="col">
-      			<img src="../images/couch/image2.jpeg" class="img-fluid project-image" alt="Responsive image">
+    			<img src="../images/couch/image3.png" class="img-fluid project-image" alt="Couch Platform">
+    		</div>
+    		<div class="col">
+    			<img src="../images/couch/image2.jpeg" class="img-fluid project-image" alt="Couch Platform">
     		</div>
   		</div>
   		<div class="row">
