--- a/projects.html
+++ b/projects.html
@@ -52,11 +52,21 @@
   			</div>
 		</div>
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="images/couch/image2.jpeg" alt="Drivable Couch">
+  			<img class="card-img-top" src="images/couch/image3.png" alt="Drivable Couch">
   			<div class="card-body">
     			<h5 class="card-title">Drivable Couch</h5>
     			<p class="card-text">This drivable platform (pictured) is soon to be a drivable couch once suitable furniture can be found...</p>
     			<a href="project_pages/couch_robot.html" class="btn btn-primary">See More</a>
+  			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+  			<img class="card-img-top" src="images/expo_digitizer/image1.jpeg" alt="Expo Digitizer">
+  			<div class="card-body">
+    			<h5 class="card-title">Expo Digitizer</h5>
+    			<p class="card-text">Made for Tufts Polyhack 2017, this Expo marker attachment generates PDF files from handwriting.</p>
+    			<a href="project_pages/expo_digitizer.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
@@ -67,8 +77,7 @@
     			<a href="project_pages/mbta_map.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
-<!-- 	<div class="row">
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+		<!-- <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
   			<img class="card-img-top" src="images/placeholder.svg" alt="Card image cap">
   			<div class="card-body">
     			<h5 class="card-title">Project Title</h5>
@@ -83,16 +92,8 @@
     			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
     			<a href="project_template.html" class="btn btn-primary">See More</a>
   			</div>
-		</div>
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="images/placeholder.svg" alt="Card image cap">
-  			<div class="card-body">
-    			<h5 class="card-title">Project Title</h5>
-    			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
-    			<a href="project_template.html" class="btn btn-primary">See More</a>
-  			</div>
-		</div>
-	</div> -->
+		</div> -->
+	</div>
 </div>
 </div>
 
