Updated Contact Me

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <div class="container-fluid bg-4 text-center">
 	<a name="contact-me"></a>
 	<p class="section-header">// contact me //</p>
-	<p class="contact-me-info">Personal Email - <a href="mailto:kanovsky.jeremy@gmail.com">kanovsky.jeremy@gmail.com</a></br>School Email - <a href="mailto:jeremy.kanovsky@tufts.com">jeremy.kanovsky@tufts.edu</a></br>Phone - 215.622.6520</p>
+	<p class="contact-me-info">Personal Email - <a href="mailto:kanovsky.jeremy@gmail.com">kanovsky.jeremy@gmail.com</a></br>School Email - <a href="mailto:jeremy.kanovsky@tufts.com">jeremy.kanovsky@tufts.edu</a></br></p>
 </div>
 
 
