--- a/projects.html
+++ b/projects.html
@@ -59,8 +59,6 @@
     			<a href="project_pages/couch_robot.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
-	</div>
-	<div class="row">
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
   			<img class="card-img-top" src="images/expo_digitizer/image1.jpeg" alt="Expo Digitizer">
   			<div class="card-body">
@@ -69,12 +67,30 @@
     			<a href="project_pages/expo_digitizer.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
+	</div>
+	<div class="row">
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
   			<img class="card-img-top" src="images/mbta/mbta_screenshot.png" alt="MBTA Map">
   			<div class="card-body">
     			<h5 class="card-title">MBTA Map with Trainschedule</h5>
     			<p class="card-text">This was a project for Tufts Comp-20 in which the Google Maps API was used to map the MBTA redline and provide a live train schedule.</p>
     			<a href="project_pages/mbta_map.html" class="btn btn-primary">See More</a>
+  			</div>
+		</div>
+		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+  			<img class="card-img-top" src="images/longboard/image3.jpeg" alt="Electric Longboard">
+  			<div class="card-body">
+    			<h5 class="card-title">Electric Longboard</h5>
+    			<p class="card-text">Made for Tufts MAKE club, this is a fully functional and ridable electric longboard.</p>
+    			<a href="project_pages/longboard.html" class="btn btn-primary">See More</a>
+  			</div>
+		</div>
+		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+  			<img class="card-img-top" src="images/quadcopter/image1.jpeg" alt="Quadcopter UAV">
+  			<div class="card-body">
+    			<h5 class="card-title">Quadcopter UAV</h5>
+    			<p class="card-text">Made with Tufts MAKE club, I lead a project team designing and programming a quadcopter UAV.</p>
+    			<a href="project_pages/quadcopter.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
 		<!-- <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
