Modified project description

--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,7 @@
   			<img class="card-img-top" src="images/longboard/image3.jpeg" alt="Electric Longboard">
   			<div class="card-body">
     			<h5 class="card-title">Electric Longboard</h5>
-    			<p class="card-text">Made for Tufts MAKE club, this is a fully functional and ridable electric longboard.</p>
+    			<p class="card-text">Made with Tufts MAKE club, this is a fully functional and ridable electric longboard.</p>
     			<a href="project_pages/longboard.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
