Added JS Animation Project

--- a/projects.html
+++ b/projects.html
@@ -78,19 +78,29 @@
   			</div>
 		</div>
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="images/longboard/image3.jpeg" alt="Electric Longboard">
-  			<div class="card-body">
-    			<h5 class="card-title">Electric Longboard</h5>
-    			<p class="card-text">Made with Tufts MAKE club, this is a fully functional and ridable electric longboard.</p>
-    			<a href="project_pages/longboard.html" class="btn btn-primary">See More</a>
-  			</div>
-		</div>
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
   			<img class="card-img-top" src="images/quadcopter/image1.jpeg" alt="Quadcopter UAV">
   			<div class="card-body">
     			<h5 class="card-title">Quadcopter UAV</h5>
     			<p class="card-text">Made with Tufts MAKE club, I lead a project team designing and programming a quadcopter UAV.</p>
     			<a href="project_pages/quadcopter.html" class="btn btn-primary">See More</a>
+  			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+  			<img class="card-img-top" src="images/js_animation/javascript_animation.PNG" alt="Javascript Animation">
+  			<div class="card-body">
+    			<h5 class="card-title">JavaScript Animation</h5>
+    			<p class="card-text">This was an animation made while I am learning JavaScript. Click "See More" for a live demo.</p>
+    			<a href="project_pages/js_animation.html" class="btn btn-primary">See More</a>
+  			</div>
+		</div>
+		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+  			<img class="card-img-top" src="images/longboard/image3.jpeg" alt="Electric Longboard">
+  			<div class="card-body">
+    			<h5 class="card-title">Electric Longboard</h5>
+    			<p class="card-text">Made with Tufts MAKE club, this is a fully functional and ridable electric longboard.</p>
+    			<a href="project_pages/longboard.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
 		<!-- <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
