Fixed JS Animatin thumbnail

--- a/projects.html
+++ b/projects.html
@@ -88,7 +88,7 @@
 	</div>
 	<div class="row">
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="images/js_animation/javascript_animation.PNG" alt="Javascript Animation">
+  			<img class="card-img-top" src="images/js_animation/javascript_animation.png" alt="Javascript Animation">
   			<div class="card-body">
     			<h5 class="card-title">JavaScript Animation</h5>
     			<p class="card-text">This was an animation made while I am learning JavaScript. Click "See More" for a live demo.</p>
