Fixed JS Animation description

--- a/project_pages/js_animation.html
+++ b/project_pages/js_animation.html
@@ -50,7 +50,7 @@
     		</div>
   		</div>
   		<div class="row">
-  			<p class="project-information">This is an animation I made with JavaScript as practice with the language. The source code can be viewed <a href="https://github.com/0xJeremy/Javascript-Animations">here</a>. As a note: this animation will likely break on some screen resolutions.</p>
+  			<p class="project-information">This is an animation I made with JavaScript as practice with the language. The source code can be viewed <a href="https://github.com/0xJeremy/Javascript-Animations">here</a>. As a note: this animation will likely break on some screen resolutions. It is best viewed in a desktop browser.</p>
   		</div>
   	</div>
 </div>
