--- a/project_pages/js_animation.html
+++ b/project_pages/js_animation.html
@@ -67,7 +67,7 @@
 			<button type="button" class="btn btn-outline-primary bottom-button-space"><a  href="https://github.com/0xJeremy"><i class="fa fa-github icon-padding" style="font-size: 30px;"></i></a></button>
 			<button type="button" class="btn btn-outline-primary bottom-button-space"><a href="mailto:kanovsky.jeremy@gmail.com"><i class="fa fa-envelope icon-padding" style="font-size: 30px;"></i></a></button>
 			<button type="button" class="btn btn-outline-primary bottom-button-space"><a href="http://www.linkedin.com/in/jeremy-kanovsky/"><i class="fa fa-linkedin icon-padding" style="font-size: 30px; bottom-button-space"></i></a></button>
-			<button type="button" class="btn btn-outline-primary bottom-button-space"><a href="../index.html#contact-me" ><i class="fa fa-phone icon-padding" style="font-size: 30px;"></i></a></button>
+<!-- 			<button type="button" class="btn btn-outline-primary bottom-button-space"><a href="index.html#contact-me" ><i class="fa fa-phone icon-padding" style="font-size: 30px;"></i></a></button> -->
 		</div>
 		<div class="footer-copyright text-center py-3">© 2018 Copyright:
 			<a href="#"> Jeremy Kanovsky</a>
