Updated About Me section

--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
   			<img class="card-img-top" src="images/trinity/IMG_4857.JPG" alt="Trinity Robot">
   			<div class="card-body">
     			<h5 class="card-title">Firefighting Robot</h5>
-    			<p class="card-text">This robot was built as part of the Trinity International Firefighting competition.</p>
+    			<p class="card-text">This robot was built to compete in the 2017/2018 Trinity International Firefighting competition.</p>
     			<a href="project_pages/trinity_robot.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
