--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <div class="container-fluid w-75 bg-2 text-center">
 	<a name="about-me"></a>
 	<p class="section-header">// about me //</p>
-	<p class="about-me-info">Hello! I am Jeremy Kanovsky, a student at Tufts University. I am studying Mechanical Engineering and Computer Science with a possible minor in Mathematics. At Tufts I am a member of the Engineering Student Council, the robotics team, the MAKE club, and the rocketry team. In my free time, I enjoy reading, attending hackathons, and spending time at the beach. Feel free to <a href="#contact-me">contact me</a> about anything!</p>
+	<p class="about-me-info">Hello! I am Jeremy Kanovsky, an undergraduate student at Tufts University. I am studying Mechanical Engineering and Computer Science. At Tufts I am a member of the Engineering Student Council, the robotics team, the MAKE club, and the rocketry team. In my free time, I enjoy reading, attending hackathons, and spending time at the beach. This website was made by me with the intent to show some of my projects and to provide a consolidated platform for potential employers. Feel free to <a href="#contact-me">contact me</a> about anything!</p>
 </div>
 
 <!-- Projects Showcase -->
@@ -65,7 +65,7 @@
   			<img class="card-img-top" src="images/trinity/IMG_4857.JPG" alt="Trinity Robot">
   			<div class="card-body">
     			<h5 class="card-title">Firefighting Robot</h5>
-    			<p class="card-text">This robot was built as part of the Trinity International Firefighting competition.</p>
+    			<p class="card-text">This robot was built to compete in the 2017/2018 Trinity International Firefighting competition.</p>
     			<a href="project_pages/trinity_robot.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
