--- a/project_pages/mbta_map.html
+++ b/project_pages/mbta_map.html
@@ -45,7 +45,10 @@
 	<div class="container">
   		<div class="row">
     		<div class="col">
-      			<img src="../images/mbta/mbta_screenshot.png" class="img-fluid project-image" alt="Responsive image">
+      			<img src="../images/mbta/mbta_screenshot.png" class="img-fluid project-image" alt="MBTA Screenshot">
+    		</div>
+    		<div class="col">
+      			<img src="../images/mbta/mbta_screenshot_1.png" class="img-fluid project-image" alt="MBTA Screenshot">
     		</div>
   		</div>
   		<div class="row">
